@startuml
hide circle
skinparam linetype ortho

title Modelo de Datos OperacionSmart (E/R - Seguridad y Procesos)

' ===============================================
' GRUPO 1: SEGURIDAD Y AUTENTICACIÓN (RBAC)
' ===============================================

entity "Users" as users {
  IdUsers : int <<PK>>
  -- CLAVE DE NEGOCIO: DNI se usa para vincular con Personal y Empleado
  DNI : nvarchar(40) <<UNIQUE>>
  ---
  PasswordHash : nvarchar(400)
  Email : nvarchar(100)
  IsActive : bit
  CreatedAt : datetime2
}

entity "Roles" as roles {
  Id : int <<PK>>
  Name : nvarchar(50) <<UNIQUE>>
  Description : nvarchar(200)
}

entity "UserRoles" as userroles {
  Id : int <<PK>>
  UserId : int <<FK users.IdUsers>>
  RoleId : int <<FK roles.Id>>
}

entity "UserActivations" as user_activations {
  Id : int <<PK>>
  UserId : int <<FK users.IdUsers>>
  DNI : nvarchar(40) 
  ---
  Token : nvarchar(64) <<UNIQUE>>
  Purpose : nvarchar(20)
  IssuedAt : datetime2
  ExpiresAt : datetime2
  UsedAt : datetime2
  IssuedBy : nvarchar(100)
  Status : nvarchar(20)
}

' ===============================================
' GRUPO 2: DATOS MAESTROS DE PERSONAL
' ===============================================

entity "Personal (Datos Oficiales)" as personal {
  DNI : nvarchar(40) <<PK>>
  ---
  Inspector : nvarchar(100)
  Telefono : nvarchar(20)
  Distrito : nvarchar(100)
  Tipo : nvarchar(40)
  FechaInicio : date
  FechaCese : date
  UsuarioCreacion : nvarchar(100)
  FechaCreacion : datetime2
  FechaModificacion : datetime2
  UsuarioModificacion : nvarchar(100)
}

entity "Empleado (Modelo Operativo)" as empleado {
  IdEmpleado : int <<PK>>
  DNI : nvarchar(40) <<UNIQUE>>
  ---
  CodigoEmpleado : nvarchar(50)
  Nombre : nvarchar(100)
  ApellidoPaterno : nvarchar(100)
  ApellidoMaterno : nvarchar(100)
  Email : nvarchar(100)
}

' ===============================================
' GRUPO 3: PROCESOS Y CARGAS
' ===============================================

entity "Cuadrillas" as cuadrillas {
  IdCuadrillas : int <<PK>>
  Nombre : nvarchar(100) <<UNIQUE>>
  Descripcion : nvarchar(500)
  Estado : nvarchar(50)
  Supervisor : nvarchar(100)
  Ubicacion : nvarchar(200)
}

entity "CuadrillaColaboradores" as cuadrilla_colaboradores {
  IdCuadrillaColaboradores : int <<PK>>
  CuadrillaId : int <<FK cuadrillas.IdCuadrillas>>
  EmpleadoId : int <<FK empleado.IdEmpleado>>
  ---
  Rol : nvarchar(50)
  Activo : bit
}

entity "Personal_EventoLaboral" as personal_evento {
  Id : int <<PK>>
  DNI : nvarchar(40) <<FK personal.DNI>>
  ---
  TipoEvento : nvarchar(40)
  Motivo : nvarchar(100)
  FechaEvento : date
  Periodo : nvarchar(20)
}

entity "Personal_Staging" as personal_staging {
  Id : int <<PK>>
  DNI : nvarchar(40) <<FK personal.DNI>>
  ---
  Archivo : nvarchar(520)
  Hoja : nvarchar(200)
  Periodo : nvarchar(20)
  Inspector : nvarchar(400)
  Situacion : nvarchar(100)
  FechaIngreso : date
  FechaCese : date
}

entity "Historial_Cargas_Personal" as historial_cargas_personal {
  Id : int <<PK>>
  Archivo : nvarchar(520)
  FechaCarga : datetime
  Usuario : nvarchar(100)
}

entity "MotivosCese" as motivos_cese {
  Codigo : int <<PK>>
  Descripcion : nvarchar(200)
}


' ===============================================
' RELACIONES
' ===============================================

' Relaciones de Seguridad (RBAC)
users ||--o{ userroles : Asignación de Rol
roles ||--o{ userroles : Pertenencia

' Relaciones de Identidad (Vinculación por DNI)
personal ||--o{ users : Credenciales
personal ||--o{ empleado : Datos Operativos

' Relaciones de Activación y Reseteo
users ||--o{ user_activations : Genera Token

' Relaciones de Procesos
personal ||--o{ personal_evento : Registra Eventos
personal ||--o{ personal_staging : Datos de Carga
empleado ||--o{ cuadrilla_colaboradores : Es Colaborador
cuadrillas ||--o{ cuadrilla_colaboradores : Pertenece a

@enduml
